--- a/.github/workflows/test-runner.yml
+++ b/.github/workflows/test-runner.yml
@@ -1,4 +1,4 @@
-name: Run Tags from Excel
+name: Run Tag Test
 
 on:
   workflow_call:
@@ -25,8 +25,9 @@ jobs:
           npm ci
           npm install xlsx --save-dev
 
-      - name: Run tag ${{ inputs.scenario-tags }}
+      - name: Run tests for ${{ inputs.scenario-tags }}
         run: |
-          echo "Running test for tag: ${{ inputs.scenario-tags }}"
-          ESCAPED_TAG=$(echo "${{ inputs.scenario-tags }}" | sed 's/\[/\\\[/g; s/\]/\\\]/g')
-          npx wdio run ./wdio.conf.ts --mochaOpts.grep="$ESCAPED_TAG"
+          TAG="${{ inputs.scenario-tags }}"
+          ESCAPED=$(echo "$TAG" | sed 's/\[/\\\[/g; s/\]/\\\]/g')
+          echo "Executing for $TAG -> escaped: $ESCAPED"
+          npx wdio run ./wdio.conf.ts --mochaOpts.grep="$ESCAPED"
