--- a/.github/workflows/run-from-excel.yml
+++ b/.github/workflows/run-from-excel.yml
@@ -10,61 +10,93 @@ permissions:
   contents: write
 
 jobs:
-  extract-and-run-tags:
+  run-priority-tests:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Setup Node.js and install xlsx
+      - name: Setup Git identity and remote auth
         run: |
-          sudo apt-get update && sudo apt-get install -y jq
-          npm install xlsx
+          git config --global user.email "actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
 
-      - name: Read tags from Excel into env
-        id: read
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+
+      - name: Install dependencies
         run: |
+          npm ci
+          npm install xlsx --save-dev
+          sudo apt-get install jq
+
+      - name: Check if Excel file exists
+        run: |
+          if [ ! -f "tag-priority.xlsx" ]; then
+            echo " tag-priority.xlsx not found. Skipping test run."
+            exit 1
+          fi
+
+      - name: Extract and run tags sequentially
+        run: |
+          echo "Reading Excel and running each tag one by one..."
+
           node -e "
             const fs = require('fs');
             const xlsx = require('xlsx');
             const workbook = xlsx.readFile('./tag-priority.xlsx');
             const sheet = workbook.Sheets[workbook.SheetNames[0]];
             const data = xlsx.utils.sheet_to_json(sheet, { header: 1 });
-            const tags = [];
 
+            const tags = [];
             for (let i = 1; i < data.length; i++) {
               const cell = (data[i][0] || '').toString().trim();
               if (!cell) continue;
-              tags.push(cell.startsWith('[') ? cell : '[' + cell + ']');
+              const rawTag = cell.startsWith('[') ? cell : '[' + cell + ']';
+              const escapedTag = rawTag.replace(/\[/g, '\\\\[').replace(/\]/g, '\\\\]');
+              tags.push({ raw: rawTag, escaped: escapedTag });
             }
 
             if (tags.length === 0) {
-              console.error('No valid tags found!');
+              console.error(' No valid tags found in Excel!');
               process.exit(1);
             }
 
-            fs.writeFileSync('tag_list.json', JSON.stringify(tags));
+            fs.writeFileSync('tag_list.json', JSON.stringify(tags, null, 2));
           "
 
-      - name: Call test-runner per tag in order
-        run: |
-          tags=$(jq -r '.[]' tag_list.json)
-          for tag in $tags; do
-            echo "Dispatching $tag..."
-            gh workflow run test-runner.yml \
-              --ref "${{ github.ref_name }}" \
-              -f scenario-tags="$tag"
-            sleep 10
-          done
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          TAG_COUNT=$(jq length tag_list.json)
+          echo "Found $TAG_COUNT tags"
 
-      - name: Clean up Excel
+          for i in $(seq 0 $((TAG_COUNT - 1))); do
+            RAW=$(jq -r ".[$i].raw" tag_list.json)
+            ESCAPED=$(jq -r ".[$i].escaped" tag_list.json)
+
+            echo "========================================"
+            echo "Running tests for tag: $RAW"
+            echo "Escaped grep: $ESCAPED"
+            echo "========================================"
+
+            npx wdio run ./wdio.conf.ts --mochaOpts.grep="$ESCAPED" | tee output_$i.log
+
+            if grep -q '0 passed' output_$i.log; then
+              echo "No tests matched tag: $RAW"
+              echo "$RAW" >> missing-tags.txt
+            else
+              echo "Tag $RAW executed with tests"
+            fi
+          done
+
+      - name: Cleanup uploaded Excel
         run: |
           git rm -f tag-priority.xlsx || true
-          git commit -m "Remove tag-priority.xlsx after dispatch" || echo "Nothing to commit"
+          git commit -m "Remove tag-priority.xlsx post execution" || echo "Nothing to commit"
           git push origin || echo "Nothing to push"
 
-      - name: Cleanup
-        run: rm -f tag_list.json
+      - name: Final cleanup of local temp files
+        run: |
+          rm -f tag_list.json missing-tags.txt output_*.log 
