--- a/.github/workflows/run-from-excel.yml
+++ b/.github/workflows/run-from-excel.yml
@@ -100,6 +100,7 @@ jobs:
   cleanup:
     name: Final Cleanup
     needs: run-tests
+    if: always()  
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
